Fix PID handling, move to /sys/reporter route

--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -51,6 +51,6 @@ Endpoints:
   Protocols:
   - http
   Mappings:
-  - Frontend: /feedhenry
-    Backend: /feedhenry
+  - Frontend: /sys/reporter
+    Backend: /sys/reporter
 Install-Build-Required: false
