--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/cianclarke/feedhenry-cartridge",
   "dependencies": {
     "async": "^0.9.0",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "express" : "4.11.1"
   }
 }
