--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -48,6 +48,9 @@ Endpoints:
   Private-Port-Name: PORT
   Private-Port: 8081
   Public-Port-Name: PROXY_PORT
+  Private-IP-Name: IP_REPORTER
+  Private-Port-Name: PORT_REPORTER
+  Private-Port: 15151
   Protocols:
   - http
   Mappings:
