--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "async": "^0.9.0",
     "underscore": "^1.7.0",
-    "express" : "4.11.1"
+    "express" : "4.11.1",
+    "body-parser": "~1.0.2",
+    "cors": "~2.2.0"
   }
 }
