--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "homepage": "https://github.com/cianclarke/feedhenry-cartridge",
   "dependencies": {
     "async": "^0.9.0",
-    "underscore": "^1.7.0",
-    "express" : "4.11.1",
     "body-parser": "~1.0.2",
-    "cors": "~2.2.0"
+    "cors": "~2.2.0",
+    "express": "4.11.1",
+    "request": "^2.51.0",
+    "underscore": "^1.7.0"
   }
 }
