--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "~1.0.2",
     "cors": "~2.2.0",
     "express": "4.11.1",
+    "fh-resource-usage": "1.1.0",
     "request": "^2.51.0",
     "underscore": "^1.7.0"
   }
