--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/mocha -A -u exports --recursive -t 10000 test/*",
     "start": "node server.js"
   },
   "repository": {
@@ -25,6 +25,11 @@
     "express": "4.11.1",
     "fh-resource-usage": "1.1.0",
     "request": "^2.51.0",
+    "socket.io": "^1.3.3",
     "underscore": "^1.7.0"
+  },
+  "devDependencies" : {
+    "mocha": "^2.1.0",
+    "proxyquire": "0.4.1"
   }
 }
