--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "fh-resource-usage": "1.1.0",
     "request": "^2.51.0",
     "socket.io": "^1.3.3",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "winston": "^0.9.0"
   },
-  "devDependencies" : {
+  "devDependencies": {
     "mocha": "^2.1.0",
     "proxyquire": "0.4.1"
   }
